--- a/files/cart.htm
+++ b/files/cart.htm
@@ -18,7 +18,7 @@
   "cartItems": [
   {% FOR cart_items %}
     {
-      "GOODS_ID": "{cart_items.GOODS_ID}",
+      "GOODS_ID": {cart_items.GOODS_ID},
       "GOODS_NAME": "{cart_items.GOODS_NAME}",
       "GOODS_MOD_ID": {cart_items.GOODS_MOD_ID},
       "ORDER_LINE_QUANTITY": {cart_items.ORDER_LINE_QUANTITY},
@@ -48,7 +48,7 @@
   {% FOR cart_related_goods %}
     {
       "GOODS_NAME": "{cart_related_goods.NAME}",
-      "GOODS_MOD_ID": "{cart_related_goods.MIN_PRICE_NOW_ID}",
+      "GOODS_MOD_ID": {cart_related_goods.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
       "GOODS_IMAGE": "{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}"
@@ -61,10 +61,10 @@
   {% IFNOT recently_viewed_goods_empty %}
   {% FOR recently_viewed_goods %}    
     {
-      "ID": "{recently_viewed_goods.ID}",
+      "ID": {recently_viewed_goods.ID},
       "NB_GOODS_IN_CART": {recently_viewed_goods.NB_GOODS_IN_CART},
       "GOODS_NAME": "{recently_viewed_goods.NAME}",
-      "GOODS_MOD_ID": "{recently_viewed_goods.MIN_PRICE_NOW_ID}",
+      "GOODS_MOD_ID": {recently_viewed_goods.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {recently_viewed_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
       "GOODS_IMAGE": "{% IF recently_viewed_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{recently_viewed_goods.IMAGE_MEDIUM}{% ENDIF %}"
@@ -77,10 +77,10 @@
   {% IFNOT goods_from_category_6037761_empty %}
   {% FOR goods_from_category_6037761 %}    
     {
-      "ID": "{goods_from_category_6037761.ID}",
+      "ID": {goods_from_category_6037761.ID},
       "NB_GOODS_IN_CART": {goods_from_category_6037761.NB_GOODS_IN_CART},
       "GOODS_NAME": "{goods_from_category_6037761.NAME}",
-      "GOODS_MOD_ID": "{goods_from_category_6037761.MIN_PRICE_NOW_ID}",
+      "GOODS_MOD_ID": {goods_from_category_6037761.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {goods_from_category_6037761.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
       "GOODS_IMAGE": "{% IF goods_from_category_6037761.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{goods_from_category_6037761.IMAGE_MEDIUM}{% ENDIF %}"
@@ -93,9 +93,9 @@
   {% IFNOT favorites_goods_empty %}
   {% FOR favorites_goods %}
     {      
-      "ID": "{favorites_goods.ID}",
-      "MAX_PRICE_NOW_ID": "{favorites_goods.MAX_PRICE_NOW_ID}",
-      "MIN_PRICE_NOW_ID": "{favorites_goods.MIN_PRICE_NOW_ID}"
+      "ID": {favorites_goods.ID},
+      "MAX_PRICE_NOW_ID": {favorites_goods.MAX_PRICE_NOW_ID},
+      "MIN_PRICE_NOW_ID": {favorites_goods.MIN_PRICE_NOW_ID}
     }
   {% IFNOT favorites_goods.last %},{% ENDIF %}
   {% ENDFOR %}
