fix: updates contracts

--- a/files/cart.htm
+++ b/files/cart.htm
@@ -1,11 +1,10 @@
 {
   "HASH": "{HASH}",
-  "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": "{SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE}",
+  "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
   "CURRENCY_CHAR_CODE":"{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
-  "CART_TRUNCATE_URL": "{CART_TRUNCATE_URL}",
   "CART_SUM_NOW": "{CART_SUM_NOW}",
-  "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
+  "CART_SUM_DELIVERY": {CART_SUM_DELIVERY},
   "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
   "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
   "CART_SUM_SUPPLIER_WITH_DELIVERY": "{CART_SUM_SUPPLIER_WITH_DELIVERY}",
@@ -13,7 +12,7 @@
   "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
   "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
-  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": "{SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")}",
+  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": {SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")},
   "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": {SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY},
   "cartItems": [
   {% FOR cart_items %}
