--- a/files/order.htm
+++ b/files/order.htm
@@ -1,11 +1,10 @@
 {
   "HASH": "{HASH}",
-  "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": "{SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE}",
+  "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
   "CURRENCY_CHAR_CODE":"{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
-  "CART_TRUNCATE_URL": "{CART_TRUNCATE_URL}",
   "CART_SUM_NOW": "{CART_SUM_NOW}",
-  "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
+  "CART_SUM_DELIVERY": {CART_SUM_DELIVERY},
   "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
   "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
   "CART_SUM_SUPPLIER_WITH_DELIVERY": "{CART_SUM_SUPPLIER_WITH_DELIVERY}",
@@ -13,7 +12,7 @@
   "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
   "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
-  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": "{SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")}",
+  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": {SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")},
   "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": {SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY},
   "cartItems": [
   {% FOR cart_items %}
@@ -77,10 +76,10 @@
   {% IFNOT goods_from_category_6037761_empty %}
   {% FOR goods_from_category_6037761 %}    
     {
-      "ID": "{goods_from_category_6037761.ID}",
+      "ID": {goods_from_category_6037761.ID},
       "NB_GOODS_IN_CART": {goods_from_category_6037761.NB_GOODS_IN_CART},
       "GOODS_NAME": "{goods_from_category_6037761.NAME}",
-      "GOODS_MOD_ID": "{goods_from_category_6037761.MIN_PRICE_NOW_ID}",
+      "GOODS_MOD_ID": {goods_from_category_6037761.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {goods_from_category_6037761.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
       "GOODS_IMAGE": "{% IF goods_from_category_6037761.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{goods_from_category_6037761.IMAGE_MEDIUM}{% ENDIF %}"
