--- a/files/order.htm
+++ b/files/order.htm
@@ -21,6 +21,8 @@
       "GOODS_NAME": "{cart_items.GOODS_NAME}",
       "GOODS_MOD_ID": {cart_items.GOODS_MOD_ID},
       "ORDER_LINE_QUANTITY": {cart_items.ORDER_LINE_QUANTITY},
+      "GOODS_MOD_REST_VALUE": {cart_items.GOODS_MOD_REST_VALUE},
+      "GOODS_DONT_PUT_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
       "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
       "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
       "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
