--- a/files/order.htm
+++ b/files/order.htm
@@ -4,7 +4,7 @@
   "CURRENCY_CHAR_CODE":"{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
   "CART_SUM_NOW": "{CART_SUM_NOW}",
-  "CART_SUM_DELIVERY": {CART_SUM_DELIVERY},
+  "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
   "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
   "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
   "CART_SUM_SUPPLIER_WITH_DELIVERY": "{CART_SUM_SUPPLIER_WITH_DELIVERY}",
