fix: update contracts

--- a/files/cart.htm
+++ b/files/cart.htm
@@ -25,8 +25,10 @@
       "GOODS_DONT_PUT_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
       "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
       "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
-      "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
-      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}",
+      "GOODS_IMAGE_EMPTY": "{cart_items.GOODS_IMAGE_EMPTY}",
+      "GOODS_IMAGE_EMPTY_URL": "{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer",
+      "GOODS_IMAGE_ICON": "{cart_items.GOODS_IMAGE_ICON}",
+      "GOODS_IMAGE": "{cart_items.GOODS_IMAGE_OTHER}",
       "GOODS_MOD_ART_NUMBER": "{cart_items.GOODS_MOD_ART_NUMBER}",
       "GOODS_URL": "{cart_items.GOODS_URL}",
       "distinctiveProperties": [
