--- a/files/order.htm
+++ b/files/order.htm
@@ -76,7 +76,7 @@
   {% ENDFOR %}
   {% ENDIF %}
   ],
-  "goodsFromCategory": [  
+  "goodsFromCategory6037761": [  
   {% IFNOT goods_from_category_6037761_empty %}
   {% FOR goods_from_category_6037761 %}    
     {
