feat: split to modules

--- a/files/html.htm
+++ b/files/html.htm
@@ -569,9 +569,11 @@
                 <script>window.HASH = '{HASH}'</script>
                 <script>window.CART_IS_EMPTY = {% IF cart_count_empty %}true{% ELSE %}false{% ENDIF %}</script>
                 <!-- <script type="text/babel" type="module" src="/design/react.js"></script> -->
-                <script type="text/babel" data-type="module" type="module" src="/design/cart-query.js" defer></script>
+                <!-- <script type="text/babel" data-type="module" type="module" src="/design/cart-query.js" defer></script> -->
                 <!-- <script type="text/babel" data-type="module" src="/design/components_EmptyCart.js"></script> -->
-                <!-- <script type="text/babel" data-type="module" src="/design/components_CartApp.js"></script> -->
+                <script type="text/babel" data-type="module" src="/design/Hooks_cart.js"></script>
+                <script type="text/babel" data-type="module" src="/design/Components_EmptyCart.js"></script>
+                <script type="text/babel" data-type="module" src="/design/Apps_Cart.js"></script>
                 <!-- <script type="text/babel" type="module" src="/design/counter.js"></script> -->                
                 <pre>
                   <!-- {print_r} -->
