--- a/files/html.htm
+++ b/files/html.htm
@@ -571,9 +571,31 @@
                 <!-- <script type="text/babel" type="module" src="/design/react.js"></script> -->
                 <!-- <script type="text/babel" data-type="module" type="module" src="/design/cart-query.js" defer></script> -->
                 <!-- <script type="text/babel" data-type="module" src="/design/components_EmptyCart.js"></script> -->
-                <script type="text/babel" data-type="module" src="/design/Hooks_cart.js"></script>
-                <script type="text/babel" data-type="module" src="/design/Components_EmptyCart.js"></script>
-                <script type="text/babel" data-type="module" src="/design/Apps_Cart.js"></script>
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Hooks_cart.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Components_EmptyCart-copy.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Components_Test.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
+                 
+                <script 
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Apps_Cart.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
                 <!-- <script type="text/babel" type="module" src="/design/counter.js"></script> -->                
                 <pre>
                   <!-- {print_r} -->
