feat: split order form

--- a/files/html.htm
+++ b/files/html.htm
@@ -574,7 +574,19 @@
                 <script
                  type="text/babel"
                  data-type="module"
-                 src="/design/Hooks_cart.js"
+                 src="/design/Hooks_Main.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Hooks_Cart.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Hooks_OrderForm.js"
                  data-plugins="transform-modules-umd"
                  defer></script>
                 <script
@@ -593,6 +605,12 @@
                  type="text/babel"
                  data-type="module"
                  src="/design/Components_Cart.js"
+                 data-plugins="transform-modules-umd"
+                 defer></script>                 
+                <script
+                 type="text/babel"
+                 data-type="module"
+                 src="/design/Components_OrderForm.js"
                  data-plugins="transform-modules-umd"
                  defer></script>                 
                 <script 
