--- a/src/html/html.htm
+++ b/src/html/html.htm
@@ -1,37 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
+  <head>
+    @@include('./_head.html')
+  </head>
 
-<head>
-  @@include('./_head.html')
-</head>
+  <body>
+    <section class="hero is-fullheight">
+      <!-- Шапка -->
+      @@include('./components/header/header.html')
+      <!-- /END Шапка -->
 
-<body>
-  @@include('./_root.html')
+      <main class="hero-body is-align-items-start">
+        <div class="container">
+          <!-- Главная страница-->
+          {% IF index_page %} @@include('./pages/index/index.html') {% ENDIF %}
 
-  <section class="hero is-fullheight">
-    <!-- Шапка -->
-    @@include('./components/header/header.html')
-    <!-- /END Шапка -->
+          <!-- Основная часть -->
+          {% IFNOT index_page %}
+          <!-- Хлебные крошки -->
+          @@include('./components/breadcrumbs/breadcrumbs.html')
+          <!-- /END Хлебные крошки -->
 
-    <main class="hero-body is-align-items-start">
-      <div class="container">
-
-      <!-- Главная страница-->
-      {% IF index_page %}
-        @@include('./pages/index/index.html')
-      {% ENDIF %}
-
-      <!-- Основная часть -->
-      {% IFNOT index_page %}
-        <!-- Хлебные крошки -->
-        @@include('./components/breadcrumbs/breadcrumbs.html')
-        <!-- /END Хлебные крошки -->
-
-        {% IF MOD_LNAME = goods || MOD_LNAME = cart || MOD_LNAME = feedback %}
-          {BODY}
-        {% ELSE %}
+          {% IF MOD_LNAME = goods || MOD_LNAME = cart || MOD_LNAME = feedback %}
+          {BODY} {% ELSE %}
           <div class="columns">
-
             <!-- Левый блок -->
             <div class="column is-one-quarter">
               @@include('./components/sidebar/sidebar.html')
@@ -45,26 +37,22 @@
               {BODY}
             </div>
           </div>
-        {% ENDIF %}
-      {% ENDIF %}
+          {% ENDIF %} {% ENDIF %}
+        </div>
+      </main>
+      <!-- /END Основная часть -->
 
-      </div>
-    </main>
-    <!-- /END Основная часть -->
+      <!-- Подвал -->
+      @@include('./components/footer/footer.html')
+      <!-- /END Подвал -->
+    </section>
 
-    <!-- Подвал -->
-    @@include('./components/footer/footer.html')
-    <!-- /END Подвал -->
-  </section>
+    <!-- SEO -->
+    @@include('./components/SEO/index.html')
+    <!-- /END SEO -->
 
-  <!-- SEO -->
-  @@include('./components/SEO/index.html')
-  <!-- /END SEO -->
-
-  <!-- Скрипты -->
-  @@include('./_scripts.html')
-  <!-- /END Скрипты -->
-
-</body>
-
+    <!-- Скрипты -->
+    @@include('./_scripts.html')
+    <!-- /END Скрипты -->
+  </body>
 </html>
