--- a/src/html/_scripts.html
+++ b/src/html/_scripts.html
@@ -1,2 +1,6 @@
 <!-- Скрипты магазина-->
-<script defer type="text/javascript" src="{ASSETS_STYLES_PATH}main.js?design=@@DESIGN_NAME"></script>
+<script
+  defer
+  type="text/javascript"
+  src="{ASSETS_STYLES_PATH}main.js?design=@@DESIGN_NAME"
+></script>
