--- a/src/html/pages/cart/cart.htm
+++ b/src/html/pages/cart/cart.htm
@@ -2,21 +2,22 @@
   "HASH": "{HASH}",
   "CLIENT_IS_LOGIN": {CLIENT_IS_LOGIN},
   "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
-  "CURRENCY_CHAR_CODE":"{CURRENCY_CHAR_CODE}",
+  "CURRENCY_CHAR_CODE": "{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
-  "CART_SUM_NOW": "{CART_SUM_NOW}",
+  "CART_SUM_NOW": {CART_SUM_NOW},
   "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
-  "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
-  "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
-  "CART_SUM_SUPPLIER_WITH_DELIVERY": "{CART_SUM_SUPPLIER_WITH_DELIVERY}",
-  "CART_SUM_NOW_WITH_DISCOUNT": "{CART_SUM_NOW_WITH_DISCOUNT}",
-  "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
-  "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
-  "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
+  "CART_SUM_NOW_WITH_DELIVERY": {CART_SUM_NOW_WITH_DELIVERY},
+  "CART_SUM_OLD_WITH_DELIVERY": {CART_SUM_OLD_WITH_DELIVERY},
+  "CART_SUM_SUPPLIER_WITH_DELIVERY": {CART_SUM_SUPPLIER_WITH_DELIVERY},
+  "CART_SUM_NOW_WITH_DISCOUNT": {CART_SUM_NOW_WITH_DISCOUNT},
+  "CART_SUM_DISCOUNT": {CART_SUM_DISCOUNT},
+  "CART_SUM_DISCOUNT_PERCENT": {CART_SUM_DISCOUNT_PERCENT},
+  "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": {CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT},
   "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": {SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")},
   "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": {SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY},
+
   "cartItems": [
-  {% FOR cart_items %}
+    {% FOR cart_items %}
     {
       "GOODS_ID": {cart_items.GOODS_ID},
       "GOODS_NAME": "{cart_items.GOODS_NAME}",
@@ -27,7 +28,7 @@
       "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
       "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
       "GOODS_IMAGE_EMPTY": "{cart_items.GOODS_IMAGE_EMPTY}",
-      "GOODS_IMAGE_EMPTY_URL": "{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer",
+      "GOODS_IMAGE_EMPTY_URL": "{ASSETS_IMAGES_PATH}no-photo-icon.png",
       "GOODS_IMAGE_ICON": "{cart_items.GOODS_IMAGE_ICON}",
       "GOODS_IMAGE": "{cart_items.GOODS_IMAGE_OTHER}",
       "GOODS_MOD_ART_NUMBER": "{cart_items.GOODS_MOD_ART_NUMBER}",
@@ -35,35 +36,34 @@
       "distinctiveProperties": [
         {% IFNOT cart_items.distinctive_properties_empty %}
         {% FOR distinctive_properties %}
-          {
-            "NAME": "{cart_items.distinctive_properties.NAME}",
-            "VALUE": "{cart_items.distinctive_properties.VALUE}"
-          }
-          {% IFNOT cart_items.distinctive_properties.last %},{% ENDIF %}
+        {
+          "NAME": "{cart_items.distinctive_properties.NAME}",
+          "VALUE": "{cart_items.distinctive_properties.VALUE}"
+        }{% IFNOT cart_items.distinctive_properties.last %},{% ENDIF %}
         {% ENDFOR %}
         {% ENDIF %}  
       ]
-    }
-  {% IFNOT cart_items.last %},{% ENDIF %}
-  {% ENDFOR %}
+    }{% IFNOT cart_items.last %},{% ENDIF %}
+    {% ENDFOR %}
   ],
+
   "cartRelatedGoods": [  
-  {% IFNOT cart_related_goods_empty %}
-  {% FOR cart_related_goods %}
+    {% IFNOT cart_related_goods_empty %}
+    {% FOR cart_related_goods %}
     {
       "GOODS_NAME": "{cart_related_goods.NAME}",
       "GOODS_MOD_ID": {cart_related_goods.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
-      "GOODS_IMAGE": "{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}"
-    }
-  {% IFNOT cart_related_goods.last %},{% ENDIF %}
-  {% ENDFOR %}
-  {% ENDIF %}
+      "GOODS_IMAGE": "{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}"
+    }{% IFNOT cart_related_goods.last %},{% ENDIF %}
+    {% ENDFOR %}
+    {% ENDIF %}
   ],
+
   "recentlyViewedGoods": [  
-  {% IFNOT recently_viewed_goods_empty %}
-  {% FOR recently_viewed_goods %}    
+    {% IFNOT recently_viewed_goods_empty %}
+    {% FOR recently_viewed_goods %}    
     {
       "ID": {recently_viewed_goods.ID},
       "NB_GOODS_IN_CART": {recently_viewed_goods.NB_GOODS_IN_CART},
@@ -71,15 +71,15 @@
       "GOODS_MOD_ID": {recently_viewed_goods.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {recently_viewed_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
-      "GOODS_IMAGE": "{% IF recently_viewed_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{recently_viewed_goods.IMAGE_MEDIUM}{% ENDIF %}"
-    }    
-    {% IFNOT recently_viewed_goods.last %},{% ENDIF %}
-  {% ENDFOR %}
-  {% ENDIF %}
+      "GOODS_IMAGE": "{% IF recently_viewed_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png{% ELSE %}{recently_viewed_goods.IMAGE_MEDIUM}{% ENDIF %}"
+    }{% IFNOT recently_viewed_goods.last %},{% ENDIF %}
+    {% ENDFOR %}
+    {% ENDIF %}
   ],
+
   "goodsFromCategory6037761": [  
-  {% IFNOT goods_from_category_6037761_empty %}
-  {% FOR goods_from_category_6037761 %}    
+    {% IFNOT goods_from_category_6037761_empty %}
+    {% FOR goods_from_category_6037761 %}    
     {
       "ID": {goods_from_category_6037761.ID},
       "NB_GOODS_IN_CART": {goods_from_category_6037761.NB_GOODS_IN_CART},
@@ -87,55 +87,56 @@
       "GOODS_MOD_ID": {goods_from_category_6037761.MIN_PRICE_NOW_ID},
       "ORDER_LINE_QUANTITY": 1,
       "MIN_PRICE_NOW_WITHOUT_DISCOUNT": {goods_from_category_6037761.MIN_PRICE_NOW_WITHOUT_DISCOUNT},
-      "GOODS_IMAGE": "{% IF goods_from_category_6037761.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{goods_from_category_6037761.IMAGE_MEDIUM}{% ENDIF %}"
-    }    
-    {% IFNOT goods_from_category_6037761.last %},{% ENDIF %}
-  {% ENDFOR %}
-  {% ENDIF %}
-  ],
-  "favoritesGoods": [  
-  {% IFNOT favorites_goods_empty %}
-  {% FOR favorites_goods %}
-    {      
-      "ID": {favorites_goods.ID},      
-      "GOODS_MOD_ID": {favorites_goods.MIN_PRICE_NOW_ID}
-    }
-  {% IFNOT favorites_goods.last %},{% ENDIF %}
-  {% ENDFOR %}
-  {% ENDIF %}
-  ],
-  "compareGoods": [  
-  {% IFNOT compare_goods_empty %}
-  {% FOR compare_goods %}
-    {      
-      "ID": "{compare_goods.ID}"
-    }
-  {% IFNOT compare_goods.last %},{% ENDIF %}
-  {% ENDFOR %}
-  {% ENDIF %}
-  ],
-  "goodsModInfo": [
-    {% IFNOT goods_mod_info_empty %}
-    {% FOR goods_mod_info %}
-      {      
-        "GOODS_MOD_ID": {goods_mod_info.GOODS_MOD_ID}
-      }
-    {% IFNOT goods_mod_info.last %},{% ENDIF %}
+      "GOODS_IMAGE": "{% IF goods_from_category_6037761.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png{% ELSE %}{goods_from_category_6037761.IMAGE_MEDIUM}{% ENDIF %}"
+    }{% IFNOT goods_from_category_6037761.last %},{% ENDIF %}
     {% ENDFOR %}
     {% ENDIF %}
   ],
+
+  "favoritesGoods": [  
+    {% IFNOT favorites_goods_empty %}
+    {% FOR favorites_goods %}
+    {      
+      "ID": {favorites_goods.ID},      
+      "GOODS_MOD_ID": {favorites_goods.MIN_PRICE_NOW_ID}
+    }{% IFNOT favorites_goods.last %},{% ENDIF %}
+    {% ENDFOR %}
+    {% ENDIF %}
+  ],
+
+  "compareGoods": [  
+    {% IFNOT compare_goods_empty %}
+    {% FOR compare_goods %}
+    {      
+      "ID": "{compare_goods.ID}"
+    }{% IFNOT compare_goods.last %},{% ENDIF %}
+    {% ENDFOR %}
+    {% ENDIF %}
+  ],
+
+  "goodsModInfo": [
+    {% IFNOT goods_mod_info_empty %}
+    {% FOR goods_mod_info %}
+    {      
+      "GOODS_MOD_ID": {goods_mod_info.GOODS_MOD_ID}
+    }{% IFNOT goods_mod_info.last %},{% ENDIF %}
+    {% ENDFOR %}
+    {% ENDIF %}
+  ],
+
   "cartDiscount": {
     {% FOR cart_discount %}
     {% IF cart_discount.DISCOUNT_IS_ENABLED %}    
-      "DISCOUNT_TYPE": "{cart_discount.DISCOUNT_TYPE}",
-      "DISCOUNT_NAME": "{cart_discount.DISCOUNT_NAME}",
-      "DISCOUNT_VALUE": {cart_discount.DISCOUNT_VALUE},
-      "IS_PERCENT": {% IF cart_discount.IS_PERCENT %}1{% ELSE %}0{% ENDIF %},
-      "END_PRICE": "{cart_discount.END_PRICE}",
-      "DISCOUNT_TYPE_DESCRIPTION": "{cart_discount.DISCOUNT_TYPE_DESCRIPTION}"    
+    "DISCOUNT_TYPE": "{cart_discount.DISCOUNT_TYPE}",
+    "DISCOUNT_NAME": "{cart_discount.DISCOUNT_NAME}",
+    "DISCOUNT_VALUE": {cart_discount.DISCOUNT_VALUE},
+    "IS_PERCENT": {% IF cart_discount.IS_PERCENT %}1{% ELSE %}0{% ENDIF %},
+    "END_PRICE": {cart_discount.END_PRICE},
+    "DISCOUNT_TYPE_DESCRIPTION": "{cart_discount.DISCOUNT_TYPE_DESCRIPTION}"    
     {% ENDIF %}
-  {% ENDFOR %}
+    {% ENDFOR %}
   },
+
   "FORM_NOTICE": "{% IF FORM_NOTICE %}{FORM_NOTICE | addslashes}{% ENDIF %}",
   "FORM_NOTICE_STATUS": "{% IF FORM_NOTICE_IS_GOOD %}success{% ELSE %}error{% ENDIF %}",
   "cartSum": "{% FOR cart_sum %}NOW: {cart_sum.NOW};DISCOUNT:{cart_sum.DISCOUNT};NOW_WITH_DELIVERY_AND_DISCOUNT:{cart_sum.NOW_WITH_DELIVERY_AND_DISCOUNT};{% ENDFOR %}"
