--- a/src/html/pages/order/order.htm
+++ b/src/html/pages/order/order.htm
@@ -4,15 +4,15 @@
   "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
   "CURRENCY_CHAR_CODE": "{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
-  "CART_SUM_NOW": {CART_SUM_NOW},
-  "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
-  "CART_SUM_NOW_WITH_DELIVERY": {CART_SUM_NOW_WITH_DELIVERY},
-  "CART_SUM_OLD_WITH_DELIVERY": {CART_SUM_OLD_WITH_DELIVERY},
-  "CART_SUM_SUPPLIER_WITH_DELIVERY": {CART_SUM_SUPPLIER_WITH_DELIVERY},
-  "CART_SUM_NOW_WITH_DISCOUNT": {CART_SUM_NOW_WITH_DISCOUNT},
-  "CART_SUM_DISCOUNT": {CART_SUM_DISCOUNT},
-  "CART_SUM_DISCOUNT_PERCENT": {CART_SUM_DISCOUNT_PERCENT},
-  "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": {CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT},
+  "CART_SUM_NOW": {% IF CART_SUM_NOW %}{CART_SUM_NOW}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_DELIVERY": {% IF CART_SUM_DELIVERY %}{CART_SUM_DELIVERY}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_NOW_WITH_DELIVERY": {% IF CART_SUM_NOW_WITH_DELIVERY %}{CART_SUM_NOW_WITH_DELIVERY}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_OLD_WITH_DELIVERY": {% IF CART_SUM_OLD_WITH_DELIVERY %}{CART_SUM_OLD_WITH_DELIVERY}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_SUPPLIER_WITH_DELIVERY": {% IF CART_SUM_SUPPLIER_WITH_DELIVERY %}{CART_SUM_SUPPLIER_WITH_DELIVERY}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_NOW_WITH_DISCOUNT": {% IF CART_SUM_NOW_WITH_DISCOUNT %}{CART_SUM_NOW_WITH_DISCOUNT}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_DISCOUNT": {% IF CART_SUM_DISCOUNT %}{CART_SUM_DISCOUNT}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_DISCOUNT_PERCENT": {% IF CART_SUM_DISCOUNT_PERCENT %}{CART_SUM_DISCOUNT_PERCENT}{% ELSE %}0{% ENDIF %},
+  "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": {% IF CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT %}{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}{% ELSE %}0{% ENDIF %},
   "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": {SETTINGS_STORE_ORDER_MIN_ORDER_PRICE | number_format("0",","," ")},
   "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": {SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY},
 
