fix: html template

--- a/src/html/html.htm
+++ b/src/html/html.htm
@@ -30,6 +30,12 @@
             <script>
               window.CART = JSON.parse(`{BODY}`);
             </script>
+
+            <details>
+              <summary>BODY</summary>
+              <pre>{BODY}</pre>
+            </details>
+            
           </div>
           {% ELSE %} {BODY} {% ENDIF %} {% ELSE %}
           <div class="columns">
