--- a/src/html/html.htm
+++ b/src/html/html.htm
@@ -31,10 +31,10 @@
               window.CART = JSON.parse(`{BODY}`);
             </script>
 
-            <details>
+            <!-- <details>
               <summary>BODY</summary>
               <pre>{BODY}</pre>
-            </details>
+            </details> -->
             
           </div>
           {% ELSE %} {BODY} {% ENDIF %} {% ELSE %}
