--- a/src/html/pages/order/order_fast.htm
+++ b/src/html/pages/order/order_fast.htm
@@ -75,7 +75,7 @@
     {% ENDFOR %}
   ],
   
-  "deliveries": [
+  "orderDelivery": [
     {% FOR order_delivery %}
     {
       "id": "{order_delivery.ID}",
